markdown/data-mongodb/5.0.0/_index.md
# data-mongodb 5.0.0

69 pages, converted from upstream Spring AsciiDoc.

- [commons/upgrade](./commons/upgrade.md)
- [index](./index.md)
- [kotlin](./kotlin.md)
- [kotlin/coroutines](./kotlin/coroutines.md)
- [kotlin/extensions](./kotlin/extensions.md)
- [kotlin/null-safety](./kotlin/null-safety.md)
- [kotlin/requirements](./kotlin/requirements.md)
- [migration-guide/migration-guide-2.x-to-3.x](./migration-guide/migration-guide-2.x-to-3.x.md)
- [migration-guide/migration-guide-3.x-to-4.x](./migration-guide/migration-guide-3.x-to-4.x.md)
- [migration-guide/migration-guide-4.x-to-5.x](./migration-guide/migration-guide-4.x-to-5.x.md)
- [migration-guides](./migration-guides.md)
- [mongodb](./mongodb.md)
- [mongodb/aggregation-framework](./mongodb/aggregation-framework.md)
- [mongodb/aot](./mongodb/aot.md)
- [mongodb/auditing](./mongodb/auditing.md)
- [mongodb/change-streams](./mongodb/change-streams.md)
- [mongodb/client-session-transactions](./mongodb/client-session-transactions.md)
- [mongodb/collation](./mongodb/collation.md)
- [mongodb/configuration](./mongodb/configuration.md)
- [mongodb/converters-type-mapping](./mongodb/converters-type-mapping.md)
- [mongodb/geo-json](./mongodb/geo-json.md)
- [mongodb/getting-started](./mongodb/getting-started.md)
- [mongodb/jmx](./mongodb/jmx.md)
- [mongodb/lifecycle-events](./mongodb/lifecycle-events.md)
- [mongodb/mapping/custom-conversions](./mongodb/mapping/custom-conversions.md)
- [mongodb/mapping/document-references](./mongodb/mapping/document-references.md)
- [mongodb/mapping/mapping-index-management](./mongodb/mapping/mapping-index-management.md)
- [mongodb/mapping/mapping-schema](./mongodb/mapping/mapping-schema.md)
- [mongodb/mapping/mapping](./mongodb/mapping/mapping.md)
- [mongodb/mapping/property-converters](./mongodb/mapping/property-converters.md)
- [mongodb/mapping/unwrapping-entities](./mongodb/mapping/unwrapping-entities.md)
- [mongodb/mongo-encryption](./mongodb/mongo-encryption.md)
- [mongodb/mongo-group](./mongodb/mongo-group.md)
- [mongodb/mongo-mapreduce](./mongodb/mongo-mapreduce.md)
- [mongodb/mongo-search-indexes](./mongodb/mongo-search-indexes.md)
- [mongodb/mongo-server-side-scripts](./mongodb/mongo-server-side-scripts.md)
- [mongodb/repositories/cdi-integration](./mongodb/repositories/cdi-integration.md)
- [mongodb/repositories/modifying-methods](./mongodb/repositories/modifying-methods.md)
- [mongodb/repositories/query-methods](./mongodb/repositories/query-methods.md)
- [mongodb/repositories/repositories](./mongodb/repositories/repositories.md)
- [mongodb/repositories/vector-search](./mongodb/repositories/vector-search.md)
- [mongodb/sharding](./mongodb/sharding.md)
- [mongodb/tailable-cursors](./mongodb/tailable-cursors.md)
- [mongodb/template-api](./mongodb/template-api.md)
- [mongodb/template-collection-management](./mongodb/template-collection-management.md)
- [mongodb/template-config](./mongodb/template-config.md)
- [mongodb/template-crud-operations](./mongodb/template-crud-operations.md)
- [mongodb/template-document-count](./mongodb/template-document-count.md)
- [mongodb/template-gridfs](./mongodb/template-gridfs.md)
- [mongodb/template-query-operations](./mongodb/template-query-operations.md)
- [mongodb/value-expressions](./mongodb/value-expressions.md)
- [observability/conventions](./observability/conventions.md)
- [observability/metrics](./observability/metrics.md)
- [observability/observability](./observability/observability.md)
- [observability/spans](./observability/spans.md)
- [preface](./preface.md)
- [repositories](./repositories.md)
- [repositories/core-concepts](./repositories/core-concepts.md)
- [repositories/core-domain-events](./repositories/core-domain-events.md)
- [repositories/core-extensions](./repositories/core-extensions.md)
- [repositories/create-instances](./repositories/create-instances.md)
- [repositories/custom-implementations](./repositories/custom-implementations.md)
- [repositories/definition](./repositories/definition.md)
- [repositories/null-handling](./repositories/null-handling.md)
- [repositories/projections](./repositories/projections.md)
- [repositories/query-by-example](./repositories/query-by-example.md)
- [repositories/query-keywords-reference](./repositories/query-keywords-reference.md)
- [repositories/query-methods-details](./repositories/query-methods-details.md)
- [repositories/query-return-types-reference](./repositories/query-return-types-reference.md)
